--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Contact
+      Rewards
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="palabras">
   <ion-list>
     <ion-list-header>Follow us on Twitter</ion-list-header>
     <ion-item>
