--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,39 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar class="palabras" color="primary">
+    <ion-title>Feed</ion-title>
   </ion-navbar>
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content padding class="palabras">
+  <ion-card (click)="changePage()">
+
+      <ion-item>
+          <ion-avatar item-start>
+            <img src="../../assets/imgs/TXT copy.png">
+          </ion-avatar>
+          <h2>Marty McFly</h2>
+          <p>November 5, 1955</p>
+        </ion-item>
+      
+    <ion-card-content>
+      <p>How can we improve our marketing stategy with black male teenagers?</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>4 Comments</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+        <div id="pushItDown"></div>
+        <ion-note color="primary" class="corner">
+          Posted 12h ago
+        </ion-note>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
 </ion-content>
