--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,10 +8,17 @@
 
 <ion-content class="palabras">
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
+  <br>
+  <br>
+  <br>
+ 
+        <img class="center" src="../../assets/imgs/Progress.png" >
+        <br>
+        <br>
+        <br>
+        <br>
+        <img class="center" src="../../assets/imgs/Prises.png" >
+
+   
   </ion-list>
 </ion-content>
