--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
+  <ion-navbar center>
+    <ion-title center>
       About
     </ion-title>
   </ion-navbar>
