--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar color="primary">
-    <ion-title>
+  <ion-navbar center color="primary">
+    <ion-title center >
       Rewards
     </ion-title>
   </ion-navbar>
@@ -12,12 +12,12 @@
   <br>
   <br>
  
-        <img class="center" src="../../assets/imgs/Progress.png" >
+        <img class="center" src="assets/imgs/Progress.png" >
         <br>
         <br>
         <br>
         <br>
-        <img class="center" src="../../assets/imgs/Prises.png" >
+        <img class="center" src="assets/imgs/Prises.png" >
 
    
   </ion-list>
