--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar class="palabras" color="primary">
-    <ion-title>Feed</ion-title>
+  <ion-navbar center class="palabras" color="primary">
+    <ion-title center >Feed</ion-title>
   </ion-navbar>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </ion-header>
@@ -24,11 +24,11 @@
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="text"></ion-icon>
-          <div>4 Comments</div>
+          <div>0 Comments</div>
         </button>
       </ion-col>
       <ion-col center text-center>
-        <div id="pushItDown"></div>
+        <div class="pushItDown"></div>
         <ion-note color="primary" class="corner">
           Posted 12h ago
         </ion-note>
