--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar class="palabras" color="primary">
     <ion-title>Group</ion-title>
   </ion-navbar>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
