--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -30,6 +30,6 @@
   <br>
 </div>
 
-<button class="button" ion-button block (click)="changeComments()">Get Involved</button>
+<button class="button" ion-button block (click)="changeComments()">Join Group</button>
 
 </ion-content>
