--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,68 @@
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="text"></ion-icon>
+          <div>1 Comments</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+        <div class="pushItDown"></div>
+        <ion-note color="primary" class="corner">
+          Posted 12h ago
+        </ion-note>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+
+  <ion-card (click)="changePage()">
+
+      <ion-item>
+          <ion-avatar item-start>
+            <img src="../../assets/imgs/TXT copy.png">
+          </ion-avatar>
+          <h2>Marty McFly</h2>
+          <p>November 5, 1955</p>
+        </ion-item>
+      
+    <ion-card-content>
+      <p>How can we improve our marketing stategy with black male teenagers?</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>0 Comments</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+        <div class="pushItDown"></div>
+        <ion-note color="primary" class="corner">
+          Posted 12h ago
+        </ion-note>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+
+  <ion-card (click)="changePage()">
+
+      <ion-item>
+          <ion-avatar item-start>
+            <img src="../../assets/imgs/TXT copy.png">
+          </ion-avatar>
+          <h2>Marty McFly</h2>
+          <p>November 5, 1955</p>
+        </ion-item>
+      
+    <ion-card-content>
+      <p>How can we improve our marketing stategy with black male teenagers?</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
           <div>0 Comments</div>
         </button>
       </ion-col>
