--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -13,7 +13,7 @@
 <div>
     <h1 id="head" text-center>Teens Exploring Technology</h1>
   <ion-card>
-    <img src="../../assets/imgs/TXT.png"/>
+    <img src="assets/imgs/TXT.png"/>
 </ion-card>
 <br>
 <p text-center id="words">TXT’s goal is to serve both brown and black boys 
