--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
 
       <ion-item>
           <ion-avatar item-start>
-            <img src="assets/imgs/TXT copy.png">
+            <img src="assets/imgs/LesP.png">
           </ion-avatar>
           <h2>Teens Exploring Technology</h2>
           <p>July 26th, 2018</p>
@@ -41,14 +41,14 @@
 
       <ion-item>
           <ion-avatar item-start>
-            <img src="assets/imgs/TXT copy.png">
+            <img src="assets/imgs/up2us.jpg">
           </ion-avatar>
-          <h2>Teens Exploring Technology</h2>
+          <h2>Up2Us Sports</h2>
           <p>July 26th, 2018</p>
         </ion-item>
       
     <ion-card-content>
-      <p>How can we improve our marketing stategy with black male teenagers?</p>
+      <p>What activities can we implement into our program?</p>
     </ion-card-content>
   
     <ion-row>
@@ -72,14 +72,14 @@
 
       <ion-item>
           <ion-avatar item-start>
-            <img src="assets/imgs/TXT copy.png">
+            <img src="../../assets/imgs/9dots.png">
           </ion-avatar>
-          <h2>Teens Exploring Technology</h2>
+          <h2>9 Dots</h2>
           <p>July 26th, 2018 </p>
         </ion-item>
       
     <ion-card-content>
-      <p>How can we improve our marketing stategy with black male teenagers?</p>
+      <p>How can we improve this flier?</p>
     </ion-card-content>
   
     <ion-row>
