--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -72,7 +72,7 @@
 
       <ion-item>
           <ion-avatar item-start>
-            <img src="../../assets/imgs/9dots.png">
+            <img src="assets/imgs/9dots.png">
           </ion-avatar>
           <h2>9 Dots</h2>
           <p>July 26th, 2018 </p>
