--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -9,8 +9,12 @@
 
 <ion-content padding>
   <div class="background">
-
+<img style="width: 80%; margin-left: 47px; " src="assets/imgs/Camp.png">
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <!-- <img  class="pic" src="assets/imgs/Hell.png"/> -->
   <div>
@@ -33,8 +37,8 @@
   <div class="lime">
     <br>
       <pre id="quest">
-        How can we improve our marketing
-        stategy with black male teenagers?
+    How can we improve our marketing
+    stategy with black male teenagers?
         </pre>
   </div>
 
